--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@client/*": ["./src/client/*"]
     }
   },
-  "include": ["src/", "tools/scripts/src"],
+  "include": ["src/"],
   "exclude": ["node_modules"]
 }
