--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   ],
   "scripts": {
     "compile": "tsc -p .",
-    "lint": "eslint **/*.ts",
-    "lint:tsc": "tsc --noEmit -p .",
-    "lint:tsc:watch": "tsc --noEmit -w -p .",
+    "compile:watch": "tsc -p . -w",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "prettier": "prettier -c .",
-    "prettier:fix": "prettier -c -w ."
+    "prettier:fix": "prettier -c -w .",
+    "lint:tsc": "tsc --noEmit -p ."
   },
   "devDependencies": {
     "@tribecamp/eslint-config-base": "^1.1.2",
