--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "compile": "tsc -p .",
     "compile:watch": "tsc -p . -w",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
     "prettier": "prettier -c .",
     "prettier:fix": "prettier -c -w .",
     "lint:tsc": "tsc --noEmit -p ."
@@ -28,6 +28,7 @@
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-jsdoc": "^31.4.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
