--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "@tribecamp/eslint-config-base": "^1.1.2",
     "@tribecamp/eslint-config-typescript": "^1.1.3",
     "@types/node": "^14.14.14",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
+    "eslint-import-resolver-node": "^0.3.4",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^31.4.0",
+    "eslint-plugin-no-loops": "^0.3.0",
+    "eslint-plugin-unicorn": "^27.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
