--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "eslint-plugin-unicorn": "^27.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
+  },
+  "resolutions": {
+    "boilerplate.ts": "portal:/home/server/projects/boilerplate.ts"
   }
 }
