--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tribecamp/eslint-config-base": "^1.1.2",
     "@tribecamp/eslint-config-typescript": "^1.1.3",
     "@types/node": "^14.14.14",
+    "@types/openpgp": "^4.4.15",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.16.0",
@@ -36,5 +37,8 @@
     "eslint-plugin-unicorn": "^27.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "openpgp": "^4.10.10"
   }
 }
